test/fail/ac/pointcutelemswrongid.app.disabled.danny.should.fix
//Error: pointcut element uses unknown identifier:
application test

access control rules

  pointcut foo(a:Int,b:Bool)
  {
    page home(),
    page bar(a),
    template car(c)
  }
  